--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.12.13'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
