--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,15 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
 
-    implementation 'com.squareup.okhttp3:okhttp:3.12.13'
+//    implementation 'com.squareup.okhttp3:okhttp:3.12.13'
+    implementation "com.squareup.okhttp3:logging-interceptor:3.12.13"
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 }
