--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
 
-//    implementation 'com.squareup.okhttp3:okhttp:3.12.13'
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.13"
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
@@ -61,5 +60,6 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+
+    implementation "com.github.leonardoxh:retrofit2-livedata-adapter:1.1.2"
 }
