--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'androidx.fragment:fragment:1.4.1'
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
+
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
 
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.13"
 
@@ -61,5 +63,30 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation "com.github.leonardoxh:retrofit2-livedata-adapter:1.1.2"
+    implementation "com.github.leonardoxh:retrofit2-livedata-adapter:1.1.0"
+
+
+    // dependency for exoplayer
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.17.0'
+
+// for core support in exoplayer.
+
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.17.0'
+
+// for adding dash support in our exoplayer.
+
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.17.0'
+
+// for adding hls support in exoplayer.
+
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.17.0'
+
+// for smooth streaming of video in our exoplayer.
+
+    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.17.0'
+
+// for generating default ui of exoplayer
+
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.17.0'
 }
