--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,30 +63,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation "com.github.leonardoxh:retrofit2-livedata-adapter:1.1.0"
+    implementation "com.github.leonardoxh:retrofit2-livedata-adapter:1.1.2"
 
-
-    // dependency for exoplayer
 
     implementation 'com.google.android.exoplayer:exoplayer:2.17.0'
 
-// for core support in exoplayer.
-
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.17.0'
-
-// for adding dash support in our exoplayer.
-
-    implementation 'com.google.android.exoplayer:exoplayer-dash:2.17.0'
-
-// for adding hls support in exoplayer.
-
-    implementation 'com.google.android.exoplayer:exoplayer-hls:2.17.0'
-
-// for smooth streaming of video in our exoplayer.
-
-    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.17.0'
-
-// for generating default ui of exoplayer
-
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.17.0'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
