--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,5 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.17.0'
 
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+//    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
